--- a/html/components/game-advance/index.html
+++ b/html/components/game-advance/index.html
@@ -1,3 +1,3 @@
-<div id="GameAdvance" class="ClickMe Hide" sbClass="Hide: /ScoreBoard.CurrentGame.Game: isThisGame" sbCall="advanceGame">
+<div id="GameAdvance" class="ClickMe Hide" sbClass="Hide: /ScoreBoard.CurrentGame.Game: === '[game]'" sbCall="advanceGame">
   Go To Current Game
 </div>
