--- a/html/components/plt-input/index.html
+++ b/html/components/plt-input/index.html
@@ -39,11 +39,11 @@
     <tr
       class="Skater Penalty"
       sbForeach="Skater:: compareRosterNumber: resort=RosterNumber"
-      sbAttr="role: Role: updatePtRowColor | rosterNumber: RosterNumber | warn: PenaltyCount, Penalty(0).Code: toWarnLevel"
+      sbAttr="role: Role | rosterNumber: RosterNumber | warn: PenaltyCount, Penalty(0).Code: toWarnLevel"
       sbClass="Captain: Flags: ==='C'"
     >
       <td class="Role Bench ShowSome ShowOnLt" rowspan="2" sbClass="OnTrack: Role: ==='Bench'" sbSet="Role: 'Bench'">
-        <span class="Num" sbDisplay="RosterNumber" /><span class="Pos">Bench</span>
+        <span class="Num" sbDisplay="RosterNumber" /><span class="Pos" sbDisplay="RosterNumber"></span>
       </td>
       <td class="Role Jammer ShowSome ShowOnLt" rowspan="2" sbClass="OnTrack: Role: ==='Jammer'" sbSet="Role: 'Jammer'">
         <span class="Num" sbDisplay="RosterNumber" /><span class="Pos">J</span>
