--- a/html/nso/plt/index.css
+++ b/html/nso/plt/index.css
@@ -1,7 +1,7 @@
 body[showTeam="1"] > .Content > [Team="2"], body[showTeam="2"] > .Content > [Team="1"] { display: none; }
-.Content { display: grid; grid: auto auto / auto auto; }
-body[showTeam="1"] > .Content { grid-template-columns: auto 0; }
-body[showTeam="2"] > .Content { grid-template-columns: 0 auto; }
+.Content { display: grid; grid: auto auto / 1fr 1fr; }
+body[showTeam="1"] > .Content { grid-template-columns: 1fr 0; }
+body[showTeam="2"] > .Content { grid-template-columns: 0 1fr; }
 .Content > [Team="1"] { grid-column: 1 / 2; }
 .Content > [Team="2"] { grid-column: 2 / 3; }
 .Content > .Input { grid-row: 1 / 2; }
