--- a/html/styles/common.css
+++ b/html/styles/common.css
@@ -12,9 +12,9 @@
 
 #indexLink { float: right; border: none; }
 
-#ConnectionStatus { position: absolute; display: none; z-index: 9999; background-color: #A00000; font-size: 40px; width: 100%; height: 100%; opacity: 0.5; top: 0; left: 0; } 
+#ConnectionStatus { position: absolute; display: none; z-index: 9999; background-color: #A00000; color: #fff; font-size: 100px; text-align: center; vertical-align: middle; line-height: 100vh; width: 100%; height: 100%; opacity: 0.5; top: 0; left: 0; } 
 #ConnectionStatus:not([status="ready"]) { display: block; } 
-#ConnectionStatus[status="loading"] { background-color: #A0A000; }
+#ConnectionStatus[status="loading"] { background-color: #A0A000; color: #000; }
 
 @keyframes spinner {
     0%   { transform: translate3d(-50%, -50%, 0) rotate(0deg);   }
